--- a/english.html
+++ b/english.html
@@ -561,6 +561,12 @@ Error message and password prompt
 
 <li>Gura</li>
 
+<li>Gura narrates 01</li>
+
+<li>Gura narrates 02</li>
+
+<li>Gura narrates 03</li>
+
 <li>Gura`s tale</li>
 
 <li>HaAarba`a 2</li>
@@ -9157,7 +9163,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200605134439277" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200725185900550" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200802132424940" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9166,7 +9172,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Dishes in the sink]] [[Coen sister]] [[Gassisted living]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9186,7 +9192,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200728065059859" title="$:/temp/search">
+<div created="20161023184814872" modified="20200802132842179" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10056,8 +10062,7 @@ I'm a Jewish male, because I was born as Jewish male. My grandma's maiden name w
  &lt;&lt;heblink [[אחיות לחושן]]&gt;&gt;</pre>
 </div>
 <div created="20200727173405536" modified="20200727183728977" tags="[[Sofa therapy]] [[On the road to somewhere]]" title="Breathing">
-<pre>
-[img[pictures/breathing.jpg]]
+<pre>[img[pictures/breathing.jpg]]
 
 
 
@@ -10882,8 +10887,13 @@ That's it, Chez Genevieve has opened its gates on the day before yesterday. I'm 
  &lt;&lt;heblink [[דליקטסן אצל ז'נבייב]]&gt;&gt;
 </pre>
 </div>
-<div created="20200308103047519" modified="20200308103244461" tags="[[On the road to somewhere]] Children [[Food addicts]] Kitchens Houses [[The Baumans]]" title="Dishes in the sink">
+<div created="20200308103047519" modified="20200802132839289" tags="[[On the road to somewhere]] Children [[Food addicts]] Kitchens Houses [[The Baumans]]" title="Dishes in the sink">
 <pre>[img[pictures/kelim-bakiyor.jpg]]
+
+
+!!![[Gura]]:
+
+[[My mom|RIP Dina]] couldn't stand dishes in the sink, and I too can't stand dishes in the sink, unless they don't have the kind of dirt that brings insects and diseases and are full with water and soap. Luckily, [[Yoyo]] had also inherited the [[disease|Comprehensive or compulsive]] from mom, and [[Iry]] is in general a walking disease. So that's a sealed deal in [[the apartment|Wishing star 01]]. 
 
 
 
@@ -10922,9 +10932,19 @@ She and the hairdresser are the responsible adults in this story.
 
  &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
 </div>
-<div created="20200307173106094" modified="20200307173245110" tags="[[When they sleep]] Recipes [[Food addicts]] [[Vegan recipes]] Meals" title="Drinking with Gura">
+<div created="20200307173106094" modified="20200802132418789" tags="[[When they sleep]] Recipes [[Food addicts]] [[Vegan recipes]] Meals" title="Drinking with Gura">
 <pre>[img[pictures/miz-anavim.jpg]]
 
+!!![[Eva|Eva Cohen]]:
+
+I woke up last Saturday, before [[Philip]] and [[Iris|Iris the daughter]], like always, and I had a message from [[Gura]], she asked if she could come over. I immediately answered yes, showered as quickly as possible. During which I asked myself what will I make for us. I recalled the not-so-pretty grapes that pissed me off. I put a coffee kettle on the stove, took out the grapes and rinsed them, grinded them in a gentle pulse with lemon juice and a little sugar, and when Gura arrived we drank coffee and vodka cocktail with grapes juice and lemon.
+
+Method:
+
+1. Crushed grapes (I had about a kilo which I rinsed and ground with a third cup of lemon juice, four spoons of sugar, a small bag of vanilla sugar and tons of ice)
+
+2. With each vodka shot we added half cup of the grapes juice and a whole cup of ice
+And it was great
 
 
 
@@ -11201,7 +11221,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20200727173657781" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20200802114413092" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11571,6 +11591,31 @@ Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]]
 
 
  &lt;&lt;heblink [[גורה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200802113537594" modified="20200802113808719" tags="[[Searching for Iry]]" title="Gura narrates 01">
+<pre>
+[img[pictures/mechapeset-1.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[גורה מספרת 01]]&gt;&gt;</pre>
+</div>
+<div created="20200802113930884" modified="20200802114046663" tags="[[Searching for Iry]]" title="Gura narrates 02">
+<pre>
+[img[pictures/mechapeset-2.jpg]]
+
+
+
+ &lt;&lt;heblink [[גורה מספרת 02]]&gt;&gt;</pre>
+</div>
+<div created="20200802114250889" modified="20200802114442905" tags="[[Searching for Iry]]" title="Gura narrates 03">
+<pre>
+[img[pictures/mechapeset-3.jpg]]
+
+
+ &lt;&lt;heblink [[גורה מספרת 03]]&gt;&gt;
 </pre>
 </div>
 <div created="20200216190625452" modified="20200501132134799" tags="Mothers Baking Metafiction [[Life is for those who can't deal with drugs]]" title="Gura`s tale">
@@ -12109,8 +12154,14 @@ In order of understanding more, I recommend :
  &lt;&lt;heblink [[אירי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213163404363" modified="20200324170451945" tags="[[Coen sister]] [[The archive's trustees]] [[On the road to somewhere]] [[Hunky Dory]]" title="Iry and Gura">
+<div created="20200213163404363" modified="20200802112320773" tags="[[Coen sister]] [[The archive's trustees]] [[On the road to somewhere]] [[Hunky Dory]]" title="Iry and Gura">
 <pre>[img[pictures/asakim-caragil.jpg]]
+
+
+!!![[Iry and Gura]]:
+
+''Yes, even though we end up on [[this planet|The global village]], we transmit, that business is usual.
+''
 
 
 &lt;&lt;list-links filter:&quot;[tag[Iry and Gura]]&quot;&gt;&gt;
@@ -12302,8 +12353,13 @@ On his behalf, even on the metro he's alone.
 
  &lt;&lt;heblink [[ג'ונג]]&gt;&gt;</pre>
 </div>
-<div created="20200308102309597" modified="20200308102444174" tags="[[On the road to somewhere]] Metafiction [[True stories]]" title="Jong goes to Lyon">
+<div created="20200308102309597" modified="20200802112011971" tags="[[On the road to somewhere]] Metafiction [[True stories]]" title="Jong goes to Lyon">
 <pre>[img[pictures/dojo-lyon.jpg]]
+
+
+!!![[Iry and Gura]]:
+
+Apart from the fact that [[Jong]] arrives everywhere by [[the metro|Public Transportation]], about once a month he takes a train to Lyon to the [[dojo|https://dojolyon.fr/]] of his [[Aikido|https://en.wikipedia.org/wiki/Aikido]] master.
 
 
 
@@ -12927,8 +12983,21 @@ I've reached Malo after a story my granny's grandma told me about her grandma's 
  &lt;&lt;heblink [[מריאן]]&gt;&gt;
 </pre>
 </div>
-<div created="20200313120734731" modified="20200313120900837" tags="HH" title="Marina Zoto">
-<pre>[img[pictures/marina-zuto.jpg]]
+<div created="20200313120734731" modified="20200802124839787" tags="HH" title="Marina Zoto">
+<pre>
+
+
+A [[Gassisted living]] project on [[Tethys ocean]].
+
+
+[img[pictures/marina-zuto.jpg]]
+
+
+!!![[Gura]]:
+
+Marina Zoto is another piece of the meticulous puzzle of [[Genesis Hilltop]] near Tethys offshore platform.
+
+The model is taken from [[Springfield|https://en.wikipedia.org/wiki/Springfield_(The_Simpsons)]], and except for destroying parts of three forests and crushing coral reefs, there isn't any apparent harm.
 
 
 
@@ -13004,13 +13073,26 @@ And tea is for the sick.
  &lt;&lt;heblink [[Max 20]]&gt;&gt;
 </pre>
 </div>
-<div created="20200222180211144" modified="20200222180600494" tags="[[I would like to apologize]] Laundry [[Dandan went]] [[True stories]]" title="Me writing">
+<div created="20200222180211144" modified="20200802131437921" tags="[[I would like to apologize]] Laundry [[Dandan went]] [[True stories]]" title="Me writing">
 <pre>[img[pictures/dAslRkCtpSF1J4AA.jpg]]
 
 
 !!![[Gura]]:
 
 
+This site of us, that [[Yoyo]], my sweet brother, established, had become my [[drainage center|Drinking with Gura]].
+
+Until then I had tried to write organized stories.
+
+I needed [[Dandan to go|Dandan went]], in order to sit and channel my depressions, sadness and anger, that are already crowded in me. The nicest thing that came out of it is, that I've always been in the adornment committee of the apartment, and since I didn't want to handle copyrights, I've started to adorn.
+
+I've drew the [[washing machine|Laundry]] and the dryer, because activating them was one of things that really calmed down [[Dandan]].
+ 
+Before he went, we almost never had any laundry [[here to wash|Wishing star 01]], cause Dandan was always up to doing it.
+
+So apart from the weekly therapy at [[Roger's|Roger]], house chores and hanging with [[my sisters|Coen sister]], I'm drowning my sorrow here.
+
+And I'm thankful for that from the [[zoto|Marina Zoto]] of my heart.
 
 
 
@@ -14245,8 +14327,13 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
  &lt;&lt;heblink [[שניצל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200219185255391" modified="20200725181241488" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Life is for those who can't deal with drugs]] Closers" title="Searching for Iry">
+<div created="20200219185255391" modified="20200802113151564" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Life is for those who can't deal with drugs]] Closers" title="Searching for Iry">
 <pre>[img[pictures/mechapeset-et-iri.jpg]]
+
+
+!!![[Gura]]:
+
+I wrote this story after we came back with [[Iry]] from India, and [[Rani|Ran Yagil]], who is a dear [[outer sister|Outer sisters]], edited it. 
 
 
 
@@ -16467,10 +16554,13 @@ I don't clean windows, that's a rule I have. On my behalf, outside the windows i
 
 </pre>
 </div>
-<div created="20200308100936748" modified="20200725180746484" tags="[[Iry and Gura]] Closers" title="Wishing star extension">
+<div created="20200308100936748" modified="20200802112811730" tags="[[Iry and Gura]] Closers" title="Wishing star extension">
 <pre>[img[pictures/hemshech-cochav.jpg]]
 
 
+!!![[Gura]]:
+
+After [[Eva|Eva Cohen]] finished writing [[wishing|9-side-wishing-star]] she passed us both the document with the text- and both of us simultaneously started to write, but then we started the sisters site, and I started to paint, and so much happened, and all that we wanted to say end up being here, meaning [[here is the extension|Coen Sisters]].
 
 
 
