--- a/index.html
+++ b/index.html
@@ -9255,7 +9255,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200601071032468" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200723171850587" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200802125536692" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9264,7 +9264,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="נשימה [[האחיות כהן]]" title="$:/StoryList">
+<div list="הכתיבה [[מחפשת את אירי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9284,7 +9284,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200727123229554" title="$:/temp/search">
+<div created="20161023184814872" modified="20200802124940826" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10403,7 +10403,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Mothers]]&gt;&gt;</pre>
 </div>
-<div created="20161206200127567" modified="20200324162938149" tags="[[אחות כהן]] [[אירי וגורה]] [[אירי טוענת]] [[מחפשת את אירי]] [[נאמני הגנזך]] [[האנקי דורי]]" title="אירי">
+<div created="20161206200127567" modified="20200802113250452" tags="[[אחות כהן]] [[אירי וגורה]] [[אירי טוענת]] [[נאמני הגנזך]] [[האנקי דורי]]" title="אירי">
 <pre>[img[pictures/iri.jpg]]
 
 !!![[אלפרד]]:
@@ -11107,7 +11107,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200723145449911" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
+<div created="20190415190001072" modified="20200802114509222" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -11365,7 +11365,7 @@ Is where I want to be
 &lt;&lt;englink [[A corpse of a bra in the sink]]&gt;&gt;
 .</pre>
 </div>
-<div created="20161026214951927" modified="20200415114153020" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] כביסה [[אירי וגורה]] [[מחפשת את אירי]]" title="גורה">
+<div created="20161026214951927" modified="20200802113304914" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] כביסה [[אירי וגורה]]" title="גורה">
 <pre>[img[pictures/gura.jpg]]
 
 !!![[יויו]]:
@@ -11385,7 +11385,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Gura]]&gt;&gt;</pre>
 </div>
-<div created="20170725142116429" modified="20170725142307592" tags="[[מחפשת את אירי]]" title="גורה מספרת 01">
+<div created="20170725142116429" modified="20200802113916358" tags="[[מחפשת את אירי]]" title="גורה מספרת 01">
 <pre>[img[pictures/mechapeset-1.jpg]]
 
 
@@ -11401,17 +11401,27 @@ Is where I want to be
 &quot;אויש, זה בדיוק המקום שרציתי להגיע אליו&quot;, אירי מלמלה לעצמה. היא הביטה בבחורה.
 &quot;נעים מאוד, שמי אירי&quot;, הגישה אירי לאישה את ידה, מסתירה זרועותיה מתחת למזרן ולכרית.
 האישה הגישה לה את ידה. &quot;אני טניה&quot;, היא הביטה באירי. אירי ראתה איך עיניה מתגלגלות בחוריהן ובבום היא נפלה אחורנית ונשכבה בלי לזוז. אירי חזרה כמה שיותר למחבואה מתחת למזרן. קולות גניחותיה של טניה נשמעו. היא הקיאה שלולית ענקית ממש קרוב לרגליה של אירי, שאם חשבה שהיא עומדת למות, עכשיו הייתה משוכנעת בכך. ריח הקיא הרג אותה. הווליום של המוזיקה היה עצום והמוזיקה הייתה מצוינת. (וואו איך הייתי רוקדת עכשיו) הגיחה לה מחשבה בתוך הדאגות. אלמלא הקיא הייתה לוקחת את הזמן אך לא יכלה לשאת את הריח. מה גם שהאישה הצעירה הקיאה עוד פעמיים. המזרן היה רחוק חמישה מטרים מפאתי אזור הריקודים. אותו מזרן (אחד משניים) הונח מתחת למין פיר שבגינו נוצר סוג של מחבוא. בחור ובחורה ישבו בחלקו העליון. הם קלטו את ההקאות אך היו שקועים בעצמם ולא שמו כל כך לב. על המעקות של הגג הענקי נשענו לא מעט אנשים שרויים בענייניהם. אירי הניחה את המזרן שהיה מעט עבה אך לא כבד על כתפיה החשופות. היא הייתה מוטרדת מאוד מכך שזרועותיה חשופות. את חוסר החזייה היא כיסתה בקצוות המזרן. אט אט החלה זוחלת ומתרחקת מטניה ומהשלולית הבלתי נסבלת. היא ניסתה לראות היכן נמצאת הכניסה לדירה ואיך זה נראה ואם היא יכולה לקוות לעזרה מכיוון כלשהו. בצלע עמוד הפיר המשיכה בזחילה 90 מעלות ימינה, לא מביטה אחורנית, זוחלת חרישית, אבנים קטנות ואבק וסיגריות נדבקים לגופה בעת הזחילה. האבנים הקטנות נשארות ומטרידות אותה. גרגרי חול משייפים את ברכיה. היא בוכה בתוך עצמה בלי קול. זוחלת עוד אחורנית, מרגישה שרגליה הנה נוגעות בקצה. הקצה היה רך. &quot;אוחחח&quot; נשמעת גניחה. היא לא רוצה להביט אחורנית. מרגישה ידיים נשלחות למותניה ומלטפות אותם. את האגן. כפות הידיים חמות ונעימות למגע, הן יורדות לעכוזה. המוזיקה מרחוק יפה, מפתה. &quot;אוחח איזה גוף&quot;, לוחש הקול הגברי. קול תזוזת הגוף נשמע. איברו מתחכך בה. אירי מסדרת לה את הכרית, מניחה את בית החזה לנוח. אירי צועקת צעקה מחרישת אוזניים. האיבר הקשה חודר לפי הטבעת שלה באחת. ללא כל התרעה. חזק. כואב. קפוא. &quot;לאאאא&quot;. אירי מעזה לצרוח שוב. תנועת האגן הגברית לא פוסקת. אירי בוכה מכאב. הוא יוצא גונח ומדביק על גבה את זרעו, נשען לאחור. אירי מתכסה שוב ומסתתרת. פיה פעור כדי חצי מיכולת הפעירה. קפוא. לא זז. עיניה פקוחות לרווחה. היא שומעת קולות מלמעלה קוראים שמות. ונרדמה.
-</pre>
+
+
+
+
+
+
+&lt;&lt;englink [[Gura narrates 01]]&gt;&gt;</pre>
 </div>
-<div created="20170725150239109" modified="20170725150408239" tags="[[מחפשת את אירי]]" title="גורה מספרת 02">
+<div created="20170725150239109" modified="20200802114155518" tags="[[מחפשת את אירי]]" title="גורה מספרת 02">
 <pre>[img[pictures/mechapeset-2.jpg]]
 
 כעבור שעתיים האיר היום. אירי עוד ישנה כשיד טופפה על כתפה. היא פקחה את עיניה ומולה עומד בחור ארוך ורזה מחייך מאוזן לאוזן. &quot;אני חושב שכדאי שכבר תלכי&quot;, הוא אמר לה ממשיך לחייך. היא הביטה בו לא מסוגלת להגיב. בכלל לקחו לה כמה שניות להבין איפה היא נמצאת. זיכרון השעות האחרונות הכה בה. היא שמעה שהוא מדבר אבל לא יצא קול מגרונה. היא התקפלה בתוך הכרית. &quot;אני אזוז, אבל אני מבקש מימך לקחת את עצמך מכאן מהר ככל האפשר&quot;, הוא אמר והמשיך לחייך. אירי ניסתה לחייך אליו בחזרה אך שרירי פניה לא זזו. את העיניים בקושי יכלה לחייך. הבחור זז ממנה. ברגע שהלך היא הסירה את הציפית של הכרית הגדולה. עם שיניה קרעה בחוזקה שני פתחים לידיים בצדדים ואחד לראש למעלה, שהיה קצת קטן, ובכל זאת הצליחה להשחיל ראשה פנימה. זה כאב. טיפות דם היו על הכרית ליד פתח הראש. היא נצמדה במהירות לקיר ונעה לאורכו עד שראתה דלת ברזל קבועה בקיר מולה. היא רצה מהר לעבר הדלת, מביטה לצדדים, בודקת שלא רואים אותה. הגג היה ריק כמעט לגמרי מאנשים. היא ראתה שדי רחוק שוכבים כמה אנשים, אולי ישנים. היא לא יכלה לראות את פתח הדירה. לקחו לה כמה דקות לפתוח את דלת הברזל הכבדה והחלודה. היא לא הייתה נעולה, אבל הסוגר היה חלוד ויבש. הדלת נפתחה לבסוף והיא עברה דרכה. היא לא יכלה לראות כמעט כלום, את הדלת היא סגרה מאחוריה כמעט לגמרי, רק חריץ צר מאוד נותר. היא ראתה תחילתן של מדרגות בחלל הצר. היא חשבה לעצמה שבהוברמן 8 אין בתי דירות גבוהי קומה, ואי לכך, שיערה, לא תצטרך לרדת הרבה קומות. היא החלה יורדת למטה. בתחילה מגששת רגלה קדימה. בודקת את גובה המדרגה שמתחת. ממשיכה לרדת עוד ארבע מדרגות. המעקה מסתובב והיא איתו ממשיכה לרדת. כך ירדה שלוש קומות ולא יכלה לראות שבתחתיתן מדרגה גבוהה. היא שלחה את רגלה, שלא נגעה בשום רצפה, רק גופה החליק, ונפלה, מנסה לבלום עם ידה. פרק היד התעקם וגם הקרסול. הצוואר נחבט. היא נפלה על הצד. הרצפה הייתה מלאה חול. היא בכתה אבל קמה, הדלת למטה הייתה חלודה גם. כוחה כמעט אזל לחלוטין מגופה כשלא הצליחה לפתוח את הדלת. היא המשיכה לבכות. היא הסתובבה שם בתחתית המדרגה דופקת על הקירות, מנקה את ברכיה מהחול והאבנים הקטנות. הרוכסן של הכרית נתקע לה בברך ופצע אותה. היא התחילה לעלות חזרה במדרגות בריצה, כמעט משלימה עם זה שתיאלץ לעבור בדירה ההיא כדי לצאת, אך חוזרת בה ויורדת. ואז משנה דעתה ושוב עולה. ושוב יורדת.
 היא התיישבה על הרצפה. מתבוננת בדלת. מתבוננת בקרסולה הימני, שנראה לה נפוח מזה של רגל שמאל. הוא כאב והיא אחזה בו. ייבבה שוב. היא התרוממה. עוזרת לעצמה לפסוע שוב לדלת כמה פסיעות קטנות החלה למשש לאט את הדלת. ממששת את הדפנות. מחפשת סוגר. מוצאת אותו. מרימה אותו אט אט הוא עולה. היא לוקחת כמה צעדים אחורנית כדי לתת בעיטה הגונה בדלת. מתכוננת. בועטת. רגלה כמעט עפה. הדלת נפתחה בקלות. עיניה התכווצו מול קרני השמש החודרות, מולה שביל, היא ממשיכה לצעוד עליו לכיוון הכביש. הקרסול כואב והיא בקושי יכולה לדרוך עליו. היא קופצת על רגלה השמאלית, אך הכאב בקרסול הימני מתעצם מהדף הקפיצות. הצוואר כואב לה וגם האמה. היא רואה שבעוד כמה צעדים היא תגיע לרחוב. באור היא רואה שהציפה של הכרית היא בתכלת ושהיא מטונפת. בתוך הבוקר גל חזק של ריח עלה מגופה ומכסותה. היא ירדה מטה ברחוב לכיוון אבן גבירול, היא הייתה צריכה נורא לשירותים והרגישה את הכאבים בעכוזה. היא המשיכה ללכת. מנסה באבן גבירול לעצור מונית. היא חיכתה די הרבה זמן עד שמונית עצרה לה כשהיא בוכה וממשיכה לפסוע לכיוון דירתה. היא רצתה להסביר לנהג אך לא יצא מגרונה קול. היא סימנה לו לעט ונייר. הוא הצליח לגרד עיפרון ומפית של &quot;ארומה&quot;. היא כתבה לו על המפית: &quot;נקלעתי למצב מביך. אין עליי ארנק. אוכל לשלם לך כשנגיע לביתי&quot;. היא לא לקחה בחשבון כי ייתכן שהבית נשאר נעול מבפנים, קיוותה ששותפתה תשמע את דפיקותיה ובכלל, מה אם היא לא ישנה בדירה הלילה? היא המשיכה ורשמה לנהג שהיא תדאג לשלם לו גם עבור הזמן שיצטרך לחכות לה. &quot;לאן לקחת אותך?&quot;, הוא שאל אותה בסבלנות. היא רשמה לו על צדה השני של המפית את כתובתה. היא נכנסה לאט למונית והתיישבה לאטה. הנהג פתח את חלונות המונית כשעצר לה בזנגביל 9. &quot;תהיי בריאה חמודה, שמרי על עצמך, את לא צריכה לשלם לי, שבת שלום&quot;. חיוך עלה על שפתיה, היא ציירה לו חיבוק ויצאה.
 למזלה שותפתה הייתה בבית, היא עמדה לצאת להדריך טיול בסטף ופתחה לה את הדלת בחלוק, לא מביטה, רצה מהר חזרה לחדרה. אירי הדליקה את הבוילר והלכה לחדרה לחכות עד שהמים יתחממו, כשחיכתה שכבה על המזרן שהיה מונח על הרצפה. כעבור זמן מה קול הדלת הנסגרת העיר אותה, היא התעוררה מביטה בתקרה, שוב עוברים בראשה זיכרונות השעות האחרונות. היא הקימה עצמה, עושה סיבוב בבית, צולעת, רואה שהוא ריק כבר, בדקה את המים, התפשטה, זרקה את כל מה שעליה לשקית אשפה, סגרה אותה והניחה אותה ליד הדלת, היא פתחה את ברז האמבטיה, שטפה את גופה מכל הטינופת, חפפה שערות והסתבנה היטב, אז החלה ממלאה את האמבט. היא הוסיפה למים קצף בריח אורנים. היא נשכבה באגן ונתנה למים לכסות את גופה, מדי פעם צוללת אל תוך בועות הסבון. כאב החדירה לא עזב אותה, גופה היה עייף, היא שכבה כך במים כמה דקות, ואז קמה, התנגבה ונכנסה מהר לתוך מיטתה, כיסתה את גופה בשמיכה עד מעל לראש התקפלה לכדור, כך נרדמה.
-</pre>
+
+
+
+
+&lt;&lt;englink [[Gura narrates 02]]&gt;&gt;</pre>
 </div>
-<div created="20170725194549922" modified="20170728194533698" tags="[[מחפשת את אירי]]" title="גורה מספרת 03">
+<div created="20170725194549922" modified="20200802114544871" tags="[[מחפשת את אירי]]" title="גורה מספרת 03">
 <pre>[img[pictures/mechapeset-3.jpg]]
 
 היא התעוררה. קרן אור חורפית סינורה אותה, משך זמן מה לא זכרה מי היא כלל, עיניה נפקחו בזו אחר זו, היא לא הבינה באיזה יום היא נמצאת. זה היה ראשון בבוקר. היא לקחה עיניה לשעון המעורר שעל השידה הקטנה שליד מיטתה, נאלצה לאמץ את צווארה כדי להגיע ולראות, הוא הראה שמונה. עוד קצת והבינה שיום ראשון בבוקר ושעוד מעט תצטרך ללכת ללימודים. היא הבינה שהיא ישנה יממה בערך אחרי ליל שישי. תמונות מהחושך על הגג חלפו בראשה, היא קמה באחת כמעט קופצת והלכה לשירותים, רחצה עצמה, הדליקה את הקומקום החשמלי. דלת חדרה של השותפה הייתה סגורה, היא שיערה שהיא כבר יצאה לעבודה. תוך כדי לבישת בגדים חמים יותר וגריבת גרביים היא שתתה את הקפה וחשבה לעצמה שהיא יכולה לא ללכת היום ללימודים. היו לה שעתיים בין שתיים לארבע. היא החליטה עוד לנוח בינתיים ולא להחליט אם היא הולכת או לא. היא החליטה להתקלח שוב. להירגע. אך לא ידעה איך. רעב הכה בבטנה. היא לקחה איתה את שקית האשפה עם כל ראיות הלילה שהייתה מונחת אבלה ליד הדלת. ירדה למכולת וקנתה ביצים, לחמניות קטנות עם סומסום, גבינת שמנת ושלוש עגבניות. עלתה והכינה לעצמה שתי ביצי עין, פרסה את העגבניות דקדק כמו שהיא אוהבת, פיזרה עליהן מלח, ערכה לעצמה את השולחן, בחרה מפית עם ציור ילדותי של נוף ומכונית קטנה נוסעת במעלה כביש, הניחה עליה את הסכו&quot;ם, שמה את [[waltz for debby|https://www.youtube.com/watch?v=dH3GSrCmzC8]], והתיישבה לאכול. חוצה את הלחמנייה, מורחת גבינה. הצלילים מניעים את גופה, היא מניחה עין אחת מהשתיים על חצי לחמנייה מרוחה בגבינה ונוגסת. חום הביצה היה נעים לה. היה לה טעים. הגוף שלה היה זקוק לביצים. היא חושבת שאולי בכל זאת תלך לשעתיים לימודים הללו. ידעה כמה רע היא תרגיש אם לא תלך, אם תשב בבית ותדע שיכלה למלא את מחויבויות חייה... בעודה שקועה במחשבות דלת חדרה של השותפה נפתחה בקול גדול וממנו יצאה בחורה גדולת גוף עם שיער ישר עד הכתפיים וחיוך ענקי שנייה אחרי שעיני שתיהן נפגשו. אירי חייכה אליה בחזרה. היא נראתה לה משונה, היו לה עיניים קטנות וצרות ופנים גדולים ומלאים וגוף משונה ומלא למדי. חולצת הטריקו שלבשה לא הצליחה לכסות את כרסה, והגומי של החצאית שלבשה הגיע עד מתחת לבטן. בלי לצחצח את השיניים היא ניגשה לאירי וחיבקה אותה ארוכות תוך כדי שהיא מצחקקת, ואז שחררה את חיבוקה ואמרה לה ששמה [[עמליה]], שהיא גדלה עם מעיין שותפתה לדירה של אירי, שהיא חזרה מטיול ארוך בהודו ושהיא מתכוונת להתאקלם קצת וכנראה תדור אצלם איזה ימים עד שתחליט איך היא ממשיכה הלאה. תוך כדי שהיא סיפרה לאירי את כל אלה היא לקחה מהלחמנייה השלמה שהייתה על השולחן, בצעה ממנה וניגבה מהעין שנותרה בצלחת, מדברת ולועסת, אירי יכלה לראות את אשר פיה המדבר לועס, זה קצת הגעיל אותה, אך מצד שני הצחוק שלה שעשע אותה. עמליה ידעה לא מעט דברים על אירי, מעיין עדכנה אותה וביקשה ממנה להיות מנומסת. עמליה צחקקה גם כשאמרה את אלה.
@@ -11470,7 +11480,14 @@ Is where I want to be
 &quot;אולי בעיקר הם?&quot;.
 &quot;אולי?&quot;.
 הן צחקו, ואירי החלה מחבבת את עמליה, עמליה אוספת אותה אליה, מקשיבה לה ומספרת לה מיני סיפורים. &quot;ודרך אגב&quot;, אמרה לה עמליה, &quot;סיפרה לי אותה אישה שפגשתי בהודו, ישראלית בגיל המעבר, היא הייתה חמודה, נראה לי שהיא המציאה אותו&quot;. 
-</pre>
+
+
+
+
+
+
+
+&lt;&lt;englink [[Gura narrates 03]]&gt;&gt;</pre>
 </div>
 <div created="20170725212505148" modified="20170729115630435" tags="[[מחפשת את אירי]]" title="גורה מספרת 04">
 <pre>[img[pictures/mechapeset-4.jpg]]
@@ -12898,7 +12915,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The global village]]&gt;&gt;</pre>
 </div>
-<div created="20170325162001136" modified="20200222180459031" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] [[אני רוצה להתנצל]] כביסה" title="הכתיבה">
+<div created="20170325162001136" modified="20200802125539144" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] [[אני רוצה להתנצל]] כביסה" title="הכתיבה">
 <pre>[img[pictures/dAslRkCtpSF1J4AA.jpg]]
 
 !!![[גורה]]:
@@ -12909,7 +12926,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 היה צריך [[שדןדן יסע|דןדן נסע]], כדי שאשב ואתעל את דכאוני ועצבוני וכעסיי, שבכל מקרה כבר יש מהם בתוכי די והותר. הדבר הכי נחמד שקרה מכל זה, הוא, שבגלל שאני תמיד הייתי ועדת קישוט של הדירה, ומאחר שלא התחשק לי לכתוב זכויות יוצרים, התחלתי לעטר.
 
-ציירתי את מכונת הכביסה והמייבש, כי אחד הדברים שהכי הרגיעו את דןדן היה להפעיל אותם.
+ציירתי את [[מכונת הכביסה|כביסה]] והמייבש, כי אחד הדברים שהכי הרגיעו את דןדן היה להפעיל אותם.
 
 לפני שהוא נסע, כמעט אף פעם לא הייתה [[כאן|כוכב המשאלות 01]] כביסה לכבס, כי [[דןדן]] תמיד חש לעשותה.
 
@@ -13992,14 +14009,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Torte]]&gt;&gt;</pre>
 </div>
-<div created="20200723145049512" modified="20200727173839549" tags="[[בדרך לאן שהוא]] [[סיפורים אמיתיים]] [[הלכות קורונה]]" title="טיפולים מהספה">
+<div created="20200723145049512" modified="20200730123834301" tags="[[בדרך לאן שהוא]] [[סיפורים אמיתיים]] [[הלכות קורונה]]" title="טיפולים מהספה">
 <pre>[img[pictures/sofatherapy.jpg]]
 
 
 
 !!![[רוז'ה]]:
 
-בעטיה של קורונה התמכרתי שוב לרביצה על הספה, הזמנת משלוחי מזון ושתייה, צפייה [[בסדרות|סדרות]], גידול כרס וחירפון כללי, אך המרפא העצמי שבי קרא אותי לסדר, וכך קרה שאגב הנ&quot;ל ארגנתי רשימת רעיונות לטיפול עצמי בעודך שוכב על הספה ומעכל, והיא תגיע לכאן בקרוב מגובה בציורים של גורה. 
+בעטיה של קורונה התמכרתי שוב לרביצה על הספה, הזמנת משלוחי מזון ושתייה, צפייה [[בסדרות|סדרות]], גידול כרס וחירפון כללי, אך המרפא העצמי שבי קרא אותי לסדר, וכך קרה שאגב הנ&quot;ל ארגנתי רשימת רעיונות לטיפול עצמי בעודך שוכב על הספה ומעכל, והיא תגיע לכאן בקרוב מגובה בציורים של [[גורה]]. 
 
 
 
@@ -14205,11 +14222,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Single parent children]]&gt;&gt;</pre>
 </div>
-<div created="20161030110441328" modified="20200726174148548" tags="HH" title="ים טתיס">
+<div created="20161030110441328" modified="20200729125908172" tags="HH" title="ים טתיס">
 <pre>[img[pictures/tethys-sea.jpg]]
 
 
-!!![[ורה]]:
+!!![[גורה]]:
 
 מאגר גז שכל התפוקה העתידית שלו נמכרה לגורם שמעדיף להישאר בעילום שם תמורת הזכות לפתח את [[מרינה זוטו]] ו[[געזונטהייטס]] בתור נכסי [[דיור מוגז]].
 
@@ -17158,9 +17175,8 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200727173240984" modified="20200728065111306" tags="[[טיפולים מהספה]] [[בדרך לאן שהוא]]" title="נשימה">
-<pre>
-[img[pictures/breathing.jpg]]
+<div created="20200727173240984" modified="20200728194914005" tags="[[טיפולים מהספה]] [[בדרך לאן שהוא]]" title="נשימה">
+<pre>[img[pictures/breathing.jpg]]
 
 !!![[רוז'ה]]:
 
